--- a/feature_store.yaml
+++ b/feature_store.yaml
@@ -4,4 +4,4 @@ provider: local
 online_store:
   type: redis
 #  connection_string: "localhost:6379"
-  connection_string: "150.238.223.198:30480"
+  connection_string: redis-service:6379
